Added hover styling to navigation links to improve user feedback and visual interaction.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,12 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Merriweather', serif;
+  } 
+
+  .nav-link:hover {
+    color: #ffc107 !important;
   }
+  
   
 
   
