--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,13 @@ h1, h2, h3, h4, h5, h6 {
     color: #ffc107 !important;
   }
   
+  /* ================= FOOTER ================= */  
+  footer {
+    background-color: #1a1a1a;
+    color: #ddd;
+  }
+
+  
   
 
   
