Styled footer headings to improve spacing and visual hierarchy.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,14 @@ h1, h2, h3, h4, h5, h6 {
   footer .footer-column {
     flex: 1 1 200px;
     margin: 10px;
+  } 
+
+  footer h5 {
+    font-weight: 600;
+    margin-bottom: 15px;
   }
+  
+
   
   
 
