--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,27 @@ h1, h2, h3, h4, h5, h6 {
   footer p, footer a {
     font-size: 0.9rem;
     line-height: 1.5;
+  }  
+
+  footer a {
+    color: #ccc;
+    text-decoration: none;
+  } 
+
+  footer a:hover {
+    color: #fff;
+    text-decoration: underline;
+  } 
+
+  .social-icons a {
+    color: #ccc;
+    margin-right: 15px;
+    font-size: 1.3rem;
+    transition: color 0.3s;
   }
+  
+  
+  
   
 
 
