--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,12 @@ h1, h2, h3, h4, h5, h6 {
     margin-right: 15px;
     font-size: 1.3rem;
     transition: color 0.3s;
+  } 
+
+  .social-icons a:hover {
+    color: #fff;
   }
+  
   
 
   
