--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,14 @@
 .btn-dark:hover {
     background-color: #ffcc00;
     color: #222;
+} 
+
+/* ================= MARK AS REVISED ================= */
+.marked {
+    background-color: #28a745 !important;
+    color: white !important;
 }
+
 
 
 
